# EMPA-Benchmark-EPMSandbox

./: .gitignore  DEPLOY_INSTRUCTIONS.md  LICENSE  PROJECT_NAVIGATION.md  PUSH_GUIDE.md  QUICK_START.md  README.md  README_zh.md  pyproject.toml  run_benchmark_custom_model.py  run_benchmark_sota_model.py  run_benchmark_tmux.sh  run_real_conversation.py  sample.md  sampled_30_full.txt  test_single_case.txt
config/: README.md  api_config.py
docs_old/: BATCH_IEDR_EVALUATION.md  BATCH_RUN_GUIDE.md  CRITICAL_BUG_FIX_STORY_CONTENT.md  DIRECTOR_ANYTIME_DECISION.md  DIRECTOR_FUNCTION_CALLING.md  DIRECTOR_PROMPT_CLEANUP.md  DIRECTOR_USAGE_EXAMPLE.md  EPJ.md  EPM.md  EPM_CALCULATION_FLOW.md  EPM_DIRECTOR_DISPLAY_FIX.md  EPM_DIRECTOR_INTEGRATION.md  EPM_GUIDANCE_ENHANCEMENT.md  EPM_RESULT_FILE_STRUCTURE.md  EPM_STRICTER_CRITERIA.md  EPM_V2_IMPLEMENTATION.md  FUNCTION_CALLING_VERIFIED.md  IEDR_COMPARISON_REPORT.md  IEDR_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  JUDGER_AND_DIRECTOR_OPTIMIZATION.md  JUDGER_CHECKLIST_LOGIC_UPDATE.md  JUDGER_CONTEXT_OPTIMIZATION.md  JUDGER_DIRECTOR_DECOUPLED.md  JUDGER_EVIDENCE_DRIVEN_FIX.md  JUDGER_SCORING_STRICTNESS_FIX.md  ORCHESTRATOR_TRADEOFFS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_CUSTOM_MODEL.md  SCRIPTS_CLEANUP.md  SETUP_REAL_CONVERSATION.md  TERMINATION_LOGIC_FIX.md  TERMINATION_LOGIC_VERIFICATION.md  TERMINATION_SIMPLE.md
empa/: __init__.py  cli.py
examples/: custom_rubric.py  run_single_case.py
results/: iedr_batch_results.json  sampled_benchmark_30.json  sampled_benchmark_30.md  sampled_benchmark_30_ids.txt
scripts/: README.md  analyze_correlations.py  analyze_epm_distribution.py  analyze_iedr_distribution.py  batch_evaluate_iedr.py  check_vstar_independence.py  export_trajectory_data.py  fix_character_prompts.py  generate_iedr_report.py  monitor_progress.py  retry_failed_scripts.py  run_all_scripts.py  run_batch_conversations.py  sample_benchmark_cases.py  visualize_3d_trajectory.py  visualize_3d_trajectory_clustered.py  visualize_3d_trajectory_enhanced.py  visualize_3d_trajectory_full_path.py  visualize_3d_trajectory_optimized.py  visualize_3d_trajectory_simple.py  visualize_3d_trajectory_statistical.py  (+8 more)
(+1968 files in other folders)
